Issue #2128167 by barraponto: Fix checkbox and radio alignment

--- a/css/tweaks.css
+++ b/css/tweaks.css
@@ -1,3 +1,12 @@
+input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
+  margin-bottom: 0;
+}
+
+input[type="radio"], input[type="checkbox"] {
+  margin: 0;
+  margin-bottom: 2px;
+}
+
 #node-edit #edit-title {
   height: auto;
 }
